<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="5dp"
                android:padding="16dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="4dp"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textSize="23sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="1.0.4"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/button10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:clickable="true"
                        android:focusable="true"
                        app:fabSize="normal"
                        app:maxImageSize="40dp"
                        app:srcCompat="@drawable/ic_share"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        />
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/button11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:clickable="true"
                        android:focusable="true"
                        app:fabSize="normal"
                        app:maxImageSize="40dp"
                        app:srcCompat="@drawable/ic_star"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        />
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/button12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:backgroundTint="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        app:fabSize="normal"
                        app:maxImageSize="50dp"
                        app:srcCompat="@drawable/ic_arrow_downward"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lineer_social_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:visibility="gone"
                        >
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/button13"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:clickable="true"
                            android:focusable="true"
                            app:fabSize="normal"
                            app:maxImageSize="40dp"
                            app:srcCompat="@drawable/ic_web"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:scaleType="center"
                            />
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/button14"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:clickable="true"
                            android:focusable="true"
                            app:fabSize="normal"
                            app:maxImageSize="40dp"
                            app:srcCompat="@drawable/ic_instagram"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:scaleType="center"
                            />
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/button15"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:clickable="true"
                            android:focusable="true"
                            app:fabSize="normal"
                            app:maxImageSize="40dp"
                            app:srcCompat="@drawable/ic_facebook"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:scaleType="center"
                            />
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/button16"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:clickable="true"
                            android:focusable="true"
                            app:fabSize="normal"
                            app:maxImageSize="42dp"
                            app:srcCompat="@drawable/ic_linkedin"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:scaleType="center"
                            />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/button_1"
                    android:textColor="@color/colorWhite"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="5dp"
                android:padding="8dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/button_2"
                    android:textColor="@color/colorWhite"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_marginTop="16dp"
                android:id="@+id/linear_banner_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="ca-app-pub-3332967002509193/5717742602">
                </com.google.android.gms.ads.AdView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>